RT-072: Edit Route in Customer Website

--- a/Web/ResellTicketSolution/WebClient.Customer/css/style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/style.css
@@ -3944,3 +3944,7 @@ span.last {
 .bold {
     font-size: bold !important;
 }
+
+.ticket-available__active .route {
+    background-color: #ffda1e13 !important
+}
