--- a/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
@@ -89,25 +89,21 @@ a:hover {
     background: none;
 }
 
-#sellingPrice {
+/* #sellingPrice {
     width: 100%; 
-    height: 40px; 
-    border: none;
     padding-left: 10px
-}
+} */
 
-/* custom autocomplete input*/
+ /* custom autocomplete input
 .autocomplete-items {
     position: absolute;
     border-bottom: none;
     border-top: none;
     z-index: 99;
-    /*position the autocomplete items to be the same width as the container:*/
+    position the autocomplete items to be the same width as the container:
     top: 100%;
     left: 0;
     right: 0;
-    padding-right: 15px;
-    padding-left: 15px;
 }
 
 .autocomplete-items div {
@@ -117,7 +113,7 @@ a:hover {
     border-bottom: 1px solid #d4d4d4; 
 }
 .autocomplete-items div:hover {
-    /*when hovering an item:*/
+    when hovering an item:
     background-color: #e9e9e9; 
-}
+} */
 /* custom autocomplete input*/
