--- a/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
@@ -69,7 +69,25 @@ a:hover {
     margin: 0 10px;
 }
 
+.btn-view-now {
+    border: 1px solid #fff;
+    display: inline-block;
+    background-color: #FCCD1E;
+    text-align: center;
+    color: brown;
+    width: 300px;
+    height: 50px;
+    padding-top: 5px; 
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
 .btn-post-now:hover {
+    box-shadow: 3px 3px 3px 3px #bdbdbd;
+}
+
+.btn-view-now:hover {
     box-shadow: 3px 3px 3px 3px #bdbdbd;
 }
 
