--- a/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/rt-style.css
@@ -48,7 +48,7 @@ a:hover {
     display: inline-block;
     background-color: #FCCD1E;
     text-align: center;
-    color: brown;
+    color: #fff;
     width: 130px;
     height: 40px;
     padding-top: 10px; 
@@ -60,7 +60,35 @@ a:hover {
     display: inline-block;
     background-color: #FCCD1E;
     text-align: center;
-    color: brown;
+    color: #fff;
+    width: 150px;
+    height: 50px;
+    padding-top: 5px; 
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+.btn-delete-now {
+    border: 1px solid #fff;
+    display: inline-block;
+    background-color:#d9534f;
+    text-align: center;
+    color: #fff;
+    width: 150px;
+    height: 50px;
+    padding-top: 5px; 
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+.btn-confirm-now {
+    border: 1px solid #fff;
+    display: inline-block;
+    background-color:#5cb85c;
+    text-align: center;
+    color: #fff;
     width: 150px;
     height: 50px;
     padding-top: 5px; 
@@ -74,7 +102,7 @@ a:hover {
     display: inline-block;
     background-color: #FCCD1E;
     text-align: center;
-    color: brown;
+    color: #fff;
     width: 300px;
     height: 50px;
     padding-top: 5px; 
@@ -84,6 +112,12 @@ a:hover {
 }
 
 .btn-post-now:hover {
+    box-shadow: 3px 3px 3px 3px #bdbdbd;
+}
+.btn-confirm-now:hover {
+    box-shadow: 3px 3px 3px 3px #bdbdbd;
+}
+.btn-delete-now:hover {
     box-shadow: 3px 3px 3px 3px #bdbdbd;
 }
 
