RT-114: refactor navigation bar

--- a/Web/ResellTicketSolution/WebClient.Customer/css/style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/style.css
@@ -503,9 +503,9 @@ ul.multi-column-dropdown h6 {
     background-color: transparent;
 }
 
-.navbar-default .navbar-nav>li>a:focus {
+/* .navbar-default .navbar-nav>li>a:focus {
     color: #fff;
-}
+} */
 
 .navbar {
     min-height: auto;
