RT-129: temporaty commit enhance search route

--- a/Web/ResellTicketSolution/WebClient.Customer/css/style.css
+++ b/Web/ResellTicketSolution/WebClient.Customer/css/style.css
@@ -4109,3 +4109,8 @@ span.last {
     0% { transform: rotate(0deg); transform: rotate(0deg); }
     100% { transform: rotate(360deg); transform: rotate(360deg); }
 }
+
+.multiselect-container.dropdown-menu {
+    top: 100%;
+    left: inherit;
+}
